# School-Rep

./: .gitignore  README.md  index.md  makefile
3220/: CMakeLists.txt  makefile  notjustcats.c  project4.tgz
3300/: Data.txt
4040/OpenImage-Sub/: Makefile
Adobe Illustrator Master/2 Objects/: combingin shapes_final.ai  layers_exercise.ai  selection and organisation.ai
Adobe Illustrator Master/3 Appearance/: appearance exercise final.ai  roads exercise.ai
Adobe Illustrator Master/4 Drawing/: distort tools.ai  manual tracing exercise.ai  manual tracing final.ai  pen tool alternatives.ai  pen tool basics.ai  pen tool exercise.ai
Adobe Illustrator Master/5 Brushes/: brushes calligraphy.ai  pattern brush exercise.ai  scatter_brush.ai
Adobe Illustrator Master/7 Type/: 3d_type result.ai  outlines result.ai  shape_type.ai
Adobe Illustrator Master/8 Advanced techniques/: blend_tool.ai  envelope_distort.ai  masking exercises.ai  symbols_branding.ai
Adobe Illustrator/Adobe Illustrator Projects/: First_Logo.ai  Test.ai
Asg-1-3220/: CMakeLists.txt  area  area.c  main.c  makefile
Assignment #1/Assignment 1/: Pgm.cpp  Pgm.h  Ppm.h
Assignment #1/Source/: Pgm.cpp  Ppm.cpp  tmp.txt
Assignment 1/: CMakeLists.txt  Pgm.cpp  Pgm.h  Ppm.cpp  Ppm.h  Singleton.cpp  Singleton.h  main.cpp
Assignment 2/: Pgm.cpp  Pgm.h  Ppm.cpp  Ppm.h  Refactor.cpp
C++/Udemy c++ Course Challenges/: Section4Challenge.cpp  tempCodeRunnerFile.cpp
C++/c++ Test Programs/: Learning C++.cpp  Multiplication Table.cpp
C4.3/: main.c
C5.3/: CMakeLists.txt  main.c
CE5.0/: main.c
CPCS-2310/CalcDiagonal/: CMakeLists.txt  driver.c
CPCS-2310/FP-HW-1/: CMakeLists.txt
CPCS-2310/PA1-Handin-Subs/: gmcroy_PA1.tar
CPSC-1010/Project #4/: main.c
CPSC-1010/Project #5/: main.c
CPSC-1010/Project #7/: main.c
CPSC-1011/Lab01/: lab01.c  lab01.txt
CPSC-1011/Lab03/: Lab03b.c
CPSC-1011/Lab05/: rockpaperscissors-enhanced.c
CPSC-1011/Lab06/: flags_checkered.c
CPSC-1011/Lab10/: example2.c
CPSC-1020/: Makefile  Week 3_23 .docx
CPSC-1020/Assignment #1 Mess/: ColorPixel.cpp  Pgm.cpp
CPSC-1020/Assignment #2/: CMakeLists.txt  GrayPixel.cpp
CPSC-1020/CPSC Quiz Study/: CMakeLists.txt
CPSC-1020/Container/: README.txt
CPSC-1020/Smart Pointers/: CMakeLists.txt  main.cpp
CPSC-1021/Lab07/: makefile
CPSC-1021/Lab08/: main.cpp  makefile
CPSC-1021/Lab09/: main.cpp
CPSC-1021/Lab10/: lab10_mcroy.tar
CPSC-2070/: CPSC 2070.apkg
CPSC-2120/Exam-1/: Exam-1.txt
CPSC-2120/Exam-Prac/: CMakeLists.txt
CPSC-2120/Project-1/: CMakeLists.txt  StoredWebPages.h  Utils.cpp
CPSC-2120/Project-2/: bad1  bad2  bad3  bad3.cpp  prog1  prog1.cpp  prog3  prog3.cpp
CPSC-2120/Project-3/: CMakeLists.txt  main.cpp  (+2 more)
CPSC-3220/: project1.tgz  q07.txt
CPSC-3220/Project-1/: CMakeLists.txt  leakcount  leakcount.c  main.c  mallocTest  mallocTest.c  shim.c  shim.dylib
CPSC-3220/Project-1/3220-1-VD-Test/: Makefile
CPSC-3220/Project-1/Project-1-1/: CMakeLists.txt  shim.dylib
CPSC-3220/Project-1/Project-1-1/shim.dylib.dSYM/Contents/Resources/DWARF/: shim.dylib
CPSC-3220/Project-1/Project-1-2/: CMakeLists.txt  main.c
CPSC-3220/Project-1/leakcount.dSYM/Contents/Resources/DWARF/: leakcount
CPSC-3220/Project-1/mallocTest.dSYM/Contents/Resources/DWARF/: mallocTest
CPSC-3220/Project-1/project1/: Makefile  sctracer.c
CPSC-3220/Project-1/shim.dylib.dSYM/Contents/Resources/DWARF/: shim.dylib
CPSC-3300/: Book1.twb  Homework 5-1.docx
CPSC-4040/: Makefile (1)
CPSC-4040/Image/: CMakeLists.txt  main.cpp
CPSC-4040/Project-3/Masking/: CMakeLists.txt  Masking.cpp  Masking.h  main.cpp
CPSC-4050/Project-1/: CMakeLists.txt  ScreenSetup.cpp  ScreenSetup.h  Triangle.cpp  Triangle.h  main.cpp
CPSC-4050/Project-1-trash/: CMakeLists.txt  Triangle.h
CPSC-4050/Project-1/Project-1-trash/: Triangle.cpp  VzlThing.C  VzlThing.h
CPSC-4050/Project-1/openGL-cmake/: CMakeLists.txt
CPSC-4050/Project-1/vzl-clion/things/: Plane.h
CPSC-4050/Project-1/vzl/base/: VzlViewer.C
CPSC-4050/Project-1/vzl/things/: MyThing.h  Plane.h
CPSC-4050/Project-2/: CMakeLists.txt  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  ImagePlane.cpp  ImagePlane.h  Light.cpp  Light.h  Plane.cpp  Plane.h  Ray.cpp  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp
CPSC-4050/Project-2/4050-Proj2/: Camera.h  Triangle.cpp  makefile
CPSC-4050/Project-2/4050-Proj2-Mac/: Geometry.h
CPSC-4050/Project-2/Project-2-Clion/: Camera.cpp  Color.h  Ray.h  Scene.cpp
CPSC-4050/Project-2/iodebug/: makefile  test.cpp
CPSC-4780/Project-4/: CMakeLists.txt  main.cpp
CPSC-4910/: Usability Testing.docx
College-Code/6th Fall Semester/CPSC-4040/Final-Project/Final-Project/: CMakeLists.txt
College-Code/CPSC-4050/Project-3/vzl-clion/: CMakeLists.txt
College-Code/CPSC-4050/Project-3/vzl-clion/things/: Face.h  MyTriangleThing.h
College/6th Fall Semester/CPSC-4780/Proj-4-4780/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Container/: GrayPixel.h  Pgm.h  Ppm.cpp
Lab 11/: Monkey.cpp  Tiger.cpp  main.cpp
Lab07/: main.c
Lab12/: a.out  main.c
Lab6/: functions.h
Lab7/: Task1.c  functions.c
MATH-3110/: MATH 3110.apkg
MakeFiles/: makefile-1
New-Proj/: HalloweenOptimization.cpp  HalloweenOptimization.h  main.cpp
Photos-Mac/: IMG_5169.mov  cm-chat-media-video-B3VesIUI6fxRzeh66OMch.mov  video0-2.mov  video0-4.mov  video0-5.mov  video0.mov
Photoshop Master/: First Work.psd
Pls-Work/: CMakeLists.txt  Jugs.cpp
Proj2-Attempt2/: CMakeLists.txt  mythreads.c
Project #3/: main.c
Project #4/: CMakeLists.txt
Project #5/: CMakeLists.txt  main.c
Project-2/: CMakeLists.txt  bad3  input1  input2  main.c  prog2  prog3.cpp  sched.h
Project-4-Blur-1/: Blur.cpp  Blur.h  main.cpp
Resources/: gradeScope.txt  makefile
TA-Grading/: horizontalWin.txt
Test/: CMakeLists.txt  hw3.c  main.cpp  web.c  web.h
WinScenarios/: diagonalWin.txt  expero.txt
final-sub/: part4.txt
lab10/: driver.cpp  pixelArt.cpp  pixelArt.h
project2/: README  container  helper.c  helper.h  mythreads.c  mythreads.h
(+12244 files in other folders)
